# proxyswap

./: Cargo.toml
i18n/en-US/: proxyswap.ftl
i18n/zh-CN/: proxyswap.ftl
src/: lang.rs  main.rs
